tests/fail/undeclared.astr
module undeclared

attributes

  eq undeclared = !1
  
  def use = id.undeclared
